@@ -1332,7 +1332,7 @@ extern ECL_API cl_object si_pathname_translations _ARGS((cl_narg narg, cl_object
 extern ECL_API cl_object si_default_pathname_defaults(void);
 extern ECL_API cl_object cl_wild_pathname_p _ARGS((cl_narg narg, cl_object pathname, ...));
 
-extern ECL_API cl_object ecl_make_pathname(cl_object host, cl_object device, cl_object directory, cl_object name, cl_object type, cl_object version);
+extern ECL_API cl_object ecl_make_pathname(cl_object host, cl_object device, cl_object directory, cl_object name, cl_object type, cl_object version, cl_object scase);
 extern ECL_API cl_object ecl_parse_namestring(cl_object s, cl_index start, cl_index end, cl_index *ep, cl_object default_host);
 extern ECL_API cl_object coerce_to_physical_pathname(cl_object x);
 extern ECL_API cl_object coerce_to_file_pathname(cl_object pathname);
